--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
 
         <Button
             android:id="@+id/btnNum0"
-            android:layout_width="@dimen/activity_main_two_button_width"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/num0" />
@@ -149,6 +149,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/igual" />
+
+        <Button
+            android:id="@+id/btnBorrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/borrar" />
 
         <Button
             android:id="@+id/btnDivision"
